# mrdsx-observer

./: .gitignore  LICENSE  README.md  compose.dev.yaml  compose.prod.yaml  compose.test.yaml  deploy.sh  docker-compose.yaml  startup.sh
backend/: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  pyproject.toml
backend/.zed/: settings.json
backend/scripts/: delete_mrdsx_observer_reports.py  delete_old_projects_reports.py  generate_projects_reports.py  migrate_db.py  migrate_projects_reports.py  transfer_projects_reports.py
backend/src/: lifespan.py  main.py
backend/src/api/: __init__.py  dependencies.py  projects_router.py
backend/src/core/: constants.py  redis_cache.py  settings.py  types.py
backend/src/database/: collections.py  documents.py  migrations.py
backend/src/models/: __init__.py  projects_reports.py
backend/src/repositories/: projects_reports.py
backend/src/schemas/: api.py  logs.py  projects_logs.py  projects_reports.py  projects_reports_v2.py  services_reports.py
backend/src/services/: olympiad_preparation.py  projects.py  projects_logs.py  projects_reports.py  requests.py  services_reports.py
backend/src/utils/: datetime.py  db.py  decorators.py  math.py  projects_logs.py  projects_reports.py  requests.py  response.py  responses.py
backend/tests/: conftest.py
backend/tests/core/: test_redis_cache.py
backend/tests/repositories/: conftest.py  test_projects_reports_repositories.py
backend/tests/services/: test_projects_reports_services.py
backend/tests/utils/: test_datetime.py  test_db.py  test_math.py  test_requests.py  (+3 more)
(+100 files in other folders)
