[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "fastapi-crons>=2.2.0",
    "pydantic-settings>=2.13.1",
    "redis>=4.6.0",
    "uvicorn>=0.43.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
]

[dependency-groups]
test = [
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
]
