[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "fastapi-crons>=2.3.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
    "sqlalchemy>=2.0.50",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
]

[dependency-groups]
test = [
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
